# Cinema-Ticket-Booking-System

./: .breakpoints  .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
static/: booking_style.css  header_style.css  movie_inf_style.css
templates/: booking.html  confirmation.html  home.html  movie_info.html
